<package>
  <name>ml_classifiers</name>
  <version>0.3.0</version>
  <description>ml_classifiers</description>

  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ml_classifiers</url>

  <author>Scott Niekum</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <ml_classifiers plugin="${prefix}/default_classifiers_plugin.xml"/>
  </export>
</package>
