<?xml version="1.0"?>
<package format="2">
  <name>ml_classifiers</name>
  <version>0.3.1</version>
  <description>ml_classifiers</description>

  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ml_classifiers</url>

  <author>Scott Niekum</author>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>pluginlib</depend>
  <depend>eigen</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <ml_classifiers plugin="${prefix}/default_classifiers_plugin.xml"/>
  </export>
</package>
